fix sidebar flex wrap

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 
 header {
   display: flex;
-  height: 5vh;
+  height: 30px;
   background-color: #ffffff;
   padding: 1em 0em 1em 2em;
   align-items: center;
@@ -26,7 +26,7 @@ h1 {
   display: flex;
   flex: 1 1 auto;
   margin-top: 20px;
-  margin-bottom: 20px;
+  margin: 10px 0;
   border-left: 1px #dadbdc solid;
   padding: 15px;
 }
@@ -79,7 +79,7 @@ select {
   height: 90vh;
   padding: 1em 1em 1em 1.5em;
   display: flex;
-  flex-wrap: wrap-reverse;
+  flex-wrap: wrap;
 }
 
 .books-container {
